<resources>
    <string name="app_name">ClienteRest</string>
    <string name="action_settings">Settings</string>
    <string name="nada"></string>
    <string name="idProfesor">idProfesor:</string>
    <string name="profesor">Profesor:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="lugarInicio">Lugar Inicio:</string>
    <string name="lugarFin">Lugar Fin:</string>
    <string name="horaInicio">Fecha Inicio:</string>
    <string name="horaFin">Fecha Fin:</string>
    <string name="tipo">Tipo:</string>
    <string name="complementaria">Complementaria</string>
    <string name="extraescolar">Extraescolar</string>
    <string name="añadir">Aceptar</string>
</resources>
